--- a/test/index.html
+++ b/test/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>currentExecutingScript unit tests</title>
-  <link rel="stylesheet" href="../node_modules/qunitjs/qunit/qunit.css">
+  <link rel="stylesheet" href="../node_modules/qunitjs/qunit/qunit.css" />
   <script src="../node_modules/qunitjs/qunit/qunit.js"></script>
   <script>
-    // Polyfill in future functionality: https://github.com/jquery/qunit/issues/490
+    // Polyfill in future functionality:
+    //   https://github.com/jquery/qunit/issues/490
     if (!QUnit.assert.expect) {
       QUnit.assert.expect = QUnit.expect;
     }
